--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.1
 author=Mikael Patel
 maintainer=Mikael Patel <mikael.patel@gmail.com>
 sentence=Generic LCD library for Arduino.
-paragraph=The LCD library provides an abstract interface for LCD devices and an adapter design pattern to allow device drivers to be reused even when LCD device communication changes. The library includes device drivers for MAX72XX and HD44780, and adapter using GPIO, Shift Register, and TWI (PCF8574).
+paragraph=The LCD library provides an abstract interface for LCD devices and an adapter design pattern to allow device drivers to be reused even when LCD device communication changes. The library includes device drivers for MAX72XX and HD44780, and adapter using GPIO, Shift Registers, and TWI (PCF8574).
 category=Display
 url=https://github.com/mikaelpatel/Arduino-LCD
 architectures=avr
