--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=Generic LCD library for Arduino.
 paragraph=The LCD library provides an abstract interface for LCD devices and an adapter design pattern to allow device drivers to be reused even when LCD device communication changes. The library includes device drivers for MAX72XX, PCD8544, HD44780, and adapter using GPIO, Shift Registers, and TWI (PCF8574).
 category=Display
 url=https://github.com/mikaelpatel/Arduino-LCD
-architectures=avr
+architectures=avr,sam
